added data and scoring to table

--- a/llm-eval-website/en/index.html
+++ b/llm-eval-website/en/index.html
@@ -20,8 +20,8 @@ lang: en
     {% include header.html %}
     {% include intro.html %}
     <div class="content">
-        <h2>Disclaimer</h2>
-        <p> This website is work in progress and contains mostly made up data. </p>
+        <h2>Disclaimer: Temporarily Made Up Data</h2>
+        <p> This website is work in progress and temporarily contains mostly made up data. </p>
     </div>
     {% include llm_overview.html %}    
     {% include footer.html %}
