--- a/llm-eval-website/nl/index.html
+++ b/llm-eval-website/nl/index.html
@@ -20,8 +20,8 @@ lang: nl
     {% include header.html %}
     {% include intro.html %}
     <div class="content">
-        <h2>Disclaimer</h2>
-        <p> This website is work in progress and contains mostly made up data. </p>
+        <h2>Disclaimer: Voorlopig Fictieve Gegevens</h2>
+        <p> Deze website is een werk in uitvoering en bevat voorlopig voornamelijk fictieve gegevens. </p>
     </div>
     {% include llm_overview.html %}    
     {% include footer.html %}
