--- a/llm-eval-website/en/index.html
+++ b/llm-eval-website/en/index.html
@@ -11,9 +11,8 @@ lang: en
     <title>Home</title>
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-    <!-- <script src="{{ site.baseurl }}/assets/js/script.js"></script> -->
-    <!-- Include jQuery before your custom script -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/script.js"></script>
 </head>
 
 <body>
