remove work in progress disclaimer

--- a/llm-eval-website/nl/index.html
+++ b/llm-eval-website/nl/index.html
@@ -18,10 +18,10 @@ lang: nl
 <body>
     {% include header.html %}
     {% include intro.html %}
-    <div class="content">
+    <!-- <div class="content">
         <h2>Disclaimer: Voorlopig Fictieve Gegevens</h2>
         <p> Deze website is een werk in uitvoering en bevat voorlopig voornamelijk fictieve gegevens. </p>
-    </div>
+    </div> -->
     {% include llm_overview.html %}    
     {% include footer.html %}
 </body>
