--- a/llm-eval-website/en/index.html
+++ b/llm-eval-website/en/index.html
@@ -18,10 +18,10 @@ lang: en
 <body>
     {% include header.html %}
     {% include intro.html %}
-    <div class="content">
+    <!-- <div class="content">
         <h2>Disclaimer: Temporarily Made Up Data</h2>
         <p> This website is work in progress and temporarily contains mostly made up data. </p>
-    </div>
+    </div> -->
     {% include llm_overview.html %}    
     {% include footer.html %}
 </body>
